benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/debug/bignum_ModExp_int_iter2_error.log
=== Verification Error - Iteration 2 ===
File: /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/files/bignum_ModExp_int.rs
Time: 2025-09-15 19:23:48

Full Error Output:
--------------------------------------------------------------------------------
Compilation failed: error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_int_impl.rs:33:9
   |
25 | exec fn get_int(s: &[char]) -> (res: nat)
   |                                      --- expected `vstd::prelude::nat` because of return type
...
33 |         0
   |         ^ expected `nat`, found integer

error[E0277]: cannot multiply `{integer}` by `vstd::prelude::nat`
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_int_impl.rs:35:11
   |
35 |         2 * get_int(&s[0..s.len() - 1]) + if s[s.len() - 1] == '1' { 1 } else { 0 }
   |           ^ no implementation for `{integer} * vstd::prelude::nat`
   |
   = help: the trait `std::ops::Mul<vstd::prelude::nat>` is not implemented for `{integer}`
   = help: the following other types implement trait `std::ops::Mul<Rhs>`:
             `&f128` implements `std::ops::Mul<f128>`
             `&f128` implements `std::ops::Mul`
             `&f16` implements `std::ops::Mul<f16>`
             `&f16` implements `std::ops::Mul`
             `&f32` implements `std::ops::Mul<f32>`
             `&f32` implements `std::ops::Mul`
             `&f64` implements `std::ops::Mul<f64>`
             `&f64` implements `std::ops::Mul`
           and 57 others

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_int_impl.rs:59:15
   |
59 |     if exp == 0 {
   |        ---    ^ expected `nat`, found integer
   |        |
   |        expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_int_impl.rs:60:9
   |
52 | fn pow_mod(base: nat, exp: nat, m: nat) -> (res: nat)
   |                                                  --- expected `vstd::prelude::nat` because of return type
...
60 |         1
   |         ^ expected `nat`, found integer

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_int_impl.rs:62:40
   |
62 |         let half = pow_mod(base, exp / 2, m);
   |                                  ---   ^ expected `nat`, found integer
   |                                  |
   |                                  expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_int_impl.rs:64:18
   |
64 |         if exp % 2 == 0 {
   |            ---   ^ expected `nat`, found integer
   |            |
   |            expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_int_impl.rs:64:23
   |
64 |         if exp % 2 == 0 {
   |            -------    ^ expected `nat`, found integer
   |            |
   |            expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_int_impl.rs:79:13
   |
79 |     if n == 0 {
   |        -    ^ expected `nat`, found integer
   |        |
   |        expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_int_impl.rs:82:24
   |
82 |         let quot = n / 2;
   |                    -   ^ expected `nat`, found integer
   |                    |
   |                    expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_int_impl.rs:83:23
   |
83 |         let rem = n % 2;
   |                   -   ^ expected `nat`, found integer
   |                   |
   |                   expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_int_impl.rs:85:29
   |
85 |         let bit = if rem == 1 { '1' } else { '0' };
   |                      ---    ^ expected `nat`, found integer
   |                      |
   |                      expected because this is `vstd::prelude::nat`

error: aborting due to 11 previous errors

Some errors have detailed explanations: E0277, E0308.
For more information about an error, try `rustc --explain E0277`.

--------------------------------------------------------------------------------

Additional Output:
error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_int_impl.rs:33:9
   |
25 | exec fn get_int(s: &[char]) -> (res: nat)
   |                                      --- expected `vstd::prelude::nat` because of return type
...
33 |         0
   |         ^ expected `nat`, found integer

error[E0277]: cannot multiply `{integer}` by `vstd::prelude::nat`
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_int_impl.rs:35:11
   |
35 |         2 * get_int(&s[0..s.len() - 1]) + if s[s.len() - 1] == '1' { 1 } else { 0 }
   |           ^ no implementation for `{integer} * vstd::prelude::nat`
   |
   = help: the trait `std::ops::Mul<vstd::prelude::nat>` is not implemented for `{integer}`
   = help: the following other types implement trait `std::ops::Mul<Rhs>`:
             `&f128` implements `std::ops::Mul<f128>`
             `&f128` implements `std::ops::Mul`
             `&f16` implements `std::ops::Mul<f16>`
             `&f16` implements `std::ops::Mul`
             `&f32` implements `std::ops::Mul<f32>`
             `&f32` implements `std::ops::Mul`
             `&f64` implements `std::ops::Mul<f64>`
             `&f64` implements `std::ops::Mul`
           and 57 others

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_int_impl.rs:59:15
   |
59 |     if exp == 0 {
   |        ---    ^ expected `nat`, found integer
   |        |
   |        expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_int_impl.rs:60:9
   |
52 | fn pow_mod(base: nat, exp: nat, m: nat) -> (res: nat)
   |                                                  --- expected `vstd::prelude::nat` because of return type
...
60 |         1
   |         ^ expected `nat`, found integer

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_int_impl.rs:62:40
   |
62 |         let half = pow_mod(base, exp / 2, m);
   |                                  ---   ^ expected `nat`, found integer
   |                                  |
   |                                  expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_int_impl.rs:64:18
   |
64 |         if exp % 2 == 0 {
   |            ---   ^ expected `nat`, found integer
   |            |
   |            expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_int_impl.rs:64:23
   |
64 |         if exp % 2 == 0 {
   |            -------    ^ expected `nat`, found integer
   |            |
   |            expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_int_impl.rs:79:13
   |
79 |     if n == 0 {
   |        -    ^ expected `nat`, found integer
   |        |
   |        expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_int_impl.rs:82:24
   |
82 |         let quot = n / 2;
   |                    -   ^ expected `nat`, found integer
   |                    |
   |                    expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_int_impl.rs:83:23
   |
83 |         let rem = n % 2;
   |                   -   ^ expected `nat`, found integer
   |                   |
   |                   expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_int_impl.rs:85:29
   |
85 |         let bit = if rem == 1 { '1' } else { '0' };
   |                      ---    ^ expected `nat`, found integer
   |                      |
   |                      expected because this is `vstd::prelude::nat`

error: aborting due to 11 previous errors

Some errors have detailed explanations: E0277, E0308.
For more information about an error, try `rustc --explain E0277`.
